f5_sphinx_theme/static/css/f5-theme.css
/* ... */
dl > dd > p {
  padding-left: 10px;
  padding-right: 10px;
}
dl > dd > table > tbody > tr:nth-child(even) > td.field-body > ul,
dl > dd > table > tbody > tr:nth-child(odd) > td.field-body > ul {
  padding-left: 10px;
}

.highlight {
  background: none!important;
}

.pageHeader {
  height: 60px;
  border-bottom: 10px solid #2270B3;
  padding-top: 4px;
}

@media (max-width: 768px) {
  .row.pageHeader, .pageHeader, #MainMenu {
    display: none;
  }
}

@media (min-width: 768px) {
  .row.pageHeader, .pageHeader, #MainMenu {
    display: block!important;
    margin-top: 0;
    margin-bottom: -4px;
    padding-bottom: 0;
  }
}

@media screen and (max-width: 1148px) {
  div[class^='highlight'] > table > tbody > tr > td.linenos {
    display: none;
  }

}

.container {
  max-width: 100%;
}

/* override table formatting from f5.css */
tr td:nth-last-child(n+5), tr td:nth-last-child(n+5) ~ td {
    font-size: 100%;
}

table.docutils.footnote, table.docutils.footnote > tbody, table.docutils.footnote > tbody > tr, table.docutils.footnote > tbody > tr > td {
    border: none;
    font-size: 95%;
    box-shadow: none;
    padding-left: 4px;
    margin-bottom: 0;
    margin-top: 0;
}

